2008-10-01  higepon  <higepon@users.sourceforge.jp>

        * Implemented all of Unicode procedures.

        * lib/mosh/unicode.ss: Added string-normalize-nfc and string-normalize-nfkc.

        * unicode/make-composition-exclusions-datum.scm : Added.

2008-09-30  higepon  <higepon@users.sourceforge.jp>

        * ArithmeticProcedures.cpp (scheme::minEx):
                                   (scheme::maxEx): Fixed bug.

        * lib/mosh/unicode.ss (string-normalize-nfd): Added.
                              (string-normalize-nfkd): Added.

2008-09-29  higepon  <higepon@users.sourceforge.jp>

        * library.scm (hashtable-for-each): Added.
                               (substring): Added.

        * unicode/make-canonical-decompose-datum.scm : Added.

2008-09-27  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/unicode.ss (string-ci=?, string-ci<?, string-ci>?)
                              (string-ci<=?): Added.

        * library.scm (string-compare, string<?, string>?, string<=?)
                      (string>=?): Added.

        * lib/mosh/unicode.ss (string-upcase, string-foldcase)
                              (string-downcase): Added.

                              (string-titlecase): Added from Ypsilon Scheme System.

2008-09-26  higepon  <higepon@users.sourceforge.jp>

        * TextualInputPort.cpp (hasPortPosition, hasSetPortPosition)
                               (portPosition, setPortPostion): Added.

        * Added lookahead-char procedure.

        * TextualInputPort.cpp (lookaheadChar): Added.

2008-09-25  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/unicode.ss : Added char-whitespace?, char-alphabetic?, char-upper-case?,
                                      char-lower-case?, char-title-case?, char-numeric?
                                      and char-general-category.

        * unicode/make-other-lowercase-property-datum.scm (main): Added.

        * unicode/make-other-uppercase-property-datum.scm (main): Added.